--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -13,14 +13,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # SonarCloud action
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.8
+        with:
+          args: >
+            -Dsonar.projectKey=ISCOUTB_DG-Financiero
+            -Dsonar.organization=isco-utb
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectKey: ISCOUTB_DG-Financiero
-          organization: isco-utb
