--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,5 +28,7 @@ jobs:
           args: >
             -Dsonar.projectKey=ISCOUTB_DG-Financiero
             -Dsonar.organization=isco-utb
+            -Dsonar.host.url=https://sonarcloud.io
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
