--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -11,14 +11,7 @@ jobs:
   sonarcloud:
     name: SonarCloud Scan
     runs-on: ubuntu-latest
-
     steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -26,9 +19,12 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v1.8
         with:
           args: >
-            -Dsonar.projectKey=ISCOUTB_DG-Financiero
+            -Dsonar.projectKey=ISCOUTB_DG_Financiero
             -Dsonar.organization=isco-utb
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.language=dart
+            -Dsonar.sources=lib
+            -Dsonar.exclusions=**/*.java,**/*.kt
+            
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
