--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,21 @@
-# Clave de tu proyecto SonarCloud
+# Clave única del proyecto en SonarCloud
 sonar.projectKey=ISCOUTB_DG-Financiero
 
 # Organización en SonarCloud
 sonar.organization=isco-utb
+
+# Versión del proyecto
 sonar.projectVersion=1.0
+
+# Codificación de las fuentes
 sonar.sourceEncoding=UTF-8
 
-# Define el directorio donde está el código fuente de tu proyecto Flutter
+# Directorio donde está el código fuente
 sonar.sources=lib
 
-# Excluir archivos de Java que no aplican para tu proyecto Flutter
+# Excluir archivos que no aplican para Flutter
 sonar.exclusions=**/*.java,**/*.kt
 
-# Definir el lenguaje como Dart
+# Especificar el lenguaje como Dart
 sonar.language=dart
 
-sonar.login=9197a22fbefed3eb52669ecd37ad2c6b7458e68e
