--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -15,6 +15,19 @@ jobs:
           fetch-depth: 0
       - name: Analisys whith SonarQube
         uses: SonarSource/Sonarqube-scan-action@v2.0.1
+      - name: Install Dart SDK
+        uses: dart-lang/setup-dart@v1
+        with:
+          sdk: "stable"
+
+      # 3. Instalar Flutter y dependencias
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "stable"
+
+      - name: Get Flutter dependencies
+        run: flutter pub get
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # Token de SonarCloud configurado en Secrets
           SONAR_HOST_URL: https://sonarcloud.io
