--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,28 +16,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Instalar Dart SDK compatible
-      - name: Install Dart SDK
-        uses: dart-lang/setup-dart@v1
-        with:
-          sdk: "3.5.2"
-
-      # 3. Instalar Flutter compatible
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.24.5"
-
-      # 4. Obtener dependencias de Flutter
-      - name: Get Flutter dependencies
-        run: flutter pub get
-
-      # 5. Configurar Java 17
+      # 2. Configurar Java 17 como predeterminado
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
+      # Confirmar versión de Java instalada
+      - name: Verify Java version
+        run: java -version
+
+      # 3. Instalar Dart SDK compatible
+      - name: Install Dart SDK
+        uses: dart-lang/setup-dart@v1
+        with:
+          sdk: "3.5.2"
+
+      # 4. Instalar Flutter compatible
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.24.5"
+
+      # 5. Obtener dependencias de Flutter
+      - name: Get Flutter dependencies
+        run: flutter pub get
 
       # 6. Instalar SonarScanner
       - name: Install SonarScanner
@@ -59,6 +62,7 @@ jobs:
             -Dsonar.sources=lib \
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
 
 
 
