--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -3,7 +3,7 @@ name: SonarCloud Analysis
 on:
   push:
     branches:
-      - master
+      - master # Cambia a 'main' si tu rama principal se llama de esa forma
   pull_request:
     types: [opened, synchronize, reopened]
 
@@ -12,42 +12,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout del repositorio
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2. Configuración de JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # Verificar la versión de Java instalada
       - name: Verify Java version
-        run: |
-          echo "Using Java version:"
-          java -version
+        run: java -version
 
+      # 3. Instalación de Dart SDK
       - name: Install Dart SDK
         uses: dart-lang/setup-dart@v1
         with:
           sdk: "3.5.2"
 
+      # 4. Instalación de Flutter
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.24.5"
 
+      # 5. Obtener dependencias de Flutter
       - name: Get Flutter dependencies
         run: flutter pub get
 
+      # 6. Instalar SonarScanner
       - name: Install SonarScanner
         run: |
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli-4.8.0.2856-linux.zip
           mv sonar-scanner-4.8.0.2856-linux sonar-scanner
           echo "$(pwd)/sonar-scanner/bin" >> $GITHUB_PATH
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          export PATH=$JAVA_HOME/bin:$PATH
 
+      # Verificar SonarScanner
+      - name: Verify SonarScanner installation
+        run: sonar-scanner --version
+
+      # 7. Ejecutar análisis de SonarCloud
       - name: Run SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
