--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -14,9 +14,15 @@ jobs:
     steps:
       # 1. Checkout del repositorio
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # 2. Configuración de JDK 17
+      # 2. Limpiar versiones previas de Java (opcional)
+      - name: Remove older Java versions
+        run: |
+          sudo apt-get remove --purge -y openjdk-11-*
+          sudo apt-get autoremove -y
+
+      # 3. Configuración de JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -25,37 +31,43 @@ jobs:
 
       # Verificar la versión de Java instalada
       - name: Verify Java version
-        run: java -version
+        run: |
+          echo "Java version in use:"
+          java -version
+          echo "JAVA_HOME is set to:"
+          echo $JAVA_HOME
 
-      # 3. Instalación de Dart SDK
+      # 4. Instalación de Dart SDK
       - name: Install Dart SDK
         uses: dart-lang/setup-dart@v1
         with:
           sdk: "3.5.2"
 
-      # 4. Instalación de Flutter
+      # 5. Instalación de Flutter
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.24.5"
 
-      # 5. Obtener dependencias de Flutter
+      # 6. Obtener dependencias de Flutter
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 6. Instalar SonarScanner
+      # 7. Instalar SonarScanner
       - name: Install SonarScanner
         run: |
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli-4.8.0.2856-linux.zip
           mv sonar-scanner-4.8.0.2856-linux sonar-scanner
           echo "$(pwd)/sonar-scanner/bin" >> $GITHUB_PATH
+          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          export PATH=$JAVA_HOME/bin:$PATH
 
       # Verificar SonarScanner
       - name: Verify SonarScanner installation
         run: sonar-scanner --version
 
-      # 7. Ejecutar análisis de SonarCloud
+      # 8. Ejecutar análisis de SonarCloud
       - name: Run SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
