--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,58 +16,46 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Limpiar versiones previas de Java (opcional)
-      - name: Remove older Java versions
-        run: |
-          sudo apt-get remove --purge -y openjdk-11-*
-          sudo apt-get autoremove -y
-
-      # 3. Configuración de JDK 17
-      - name: Set up JDK 17
+      # 2. Configuración de JDK 11 (compatible con SonarScanner 4.8.x)
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '11'
           distribution: 'temurin'
 
       # Verificar la versión de Java instalada
       - name: Verify Java version
-        run: |
-          echo "Java version in use:"
-          java -version
-          echo "JAVA_HOME is set to:"
-          echo $JAVA_HOME
+        run: java -version
 
-      # 4. Instalación de Dart SDK
+      # 3. Instalación de Dart SDK
       - name: Install Dart SDK
         uses: dart-lang/setup-dart@v1
         with:
           sdk: "3.5.2"
 
-      # 5. Instalación de Flutter
+      # 4. Instalación de Flutter
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.24.5"
 
-      # 6. Obtener dependencias de Flutter
+      # 5. Obtener dependencias de Flutter
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 7. Instalar SonarScanner
-      - name: Install SonarScanner
+      # 6. Descargar e instalar SonarScanner 4.8.x
+      - name: Install SonarScanner 4.8.x
         run: |
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner-cli-4.8.0.2856-linux.zip
           mv sonar-scanner-4.8.0.2856-linux sonar-scanner
           echo "$(pwd)/sonar-scanner/bin" >> $GITHUB_PATH
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          export PATH=$JAVA_HOME/bin:$PATH
 
-      # Verificar SonarScanner
+      # Verificar instalación de SonarScanner
       - name: Verify SonarScanner installation
         run: sonar-scanner --version
 
-      # 8. Ejecutar análisis de SonarCloud
+      # 7. Ejecutar análisis de SonarCloud
       - name: Run SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -79,6 +67,7 @@ jobs:
             -Dsonar.sources=lib \
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
 
 
 
