--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,16 +16,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Configuración de JDK 11 (compatible con SonarScanner 4.8.x)
-      - name: Set up JDK 11
+      # 2. Configurar JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       # Verificar la versión de Java instalada
       - name: Verify Java version
-        run: java -version
+        run: |
+          echo "Java version in use:"
+          java -version
 
       # 3. Instalación de Dart SDK
       - name: Install Dart SDK
@@ -43,13 +45,15 @@ jobs:
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      # 6. Descargar e instalar SonarScanner 4.8.x
-      - name: Install SonarScanner 4.8.x
+      # 6. Instalar SonarScanner versión 5.0 o superior
+      - name: Install SonarScanner 5.0.1
         run: |
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-          unzip sonar-scanner-cli-4.8.0.2856-linux.zip
-          mv sonar-scanner-4.8.0.2856-linux sonar-scanner
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+          mv sonar-scanner-5.0.1.3006-linux sonar-scanner
           echo "$(pwd)/sonar-scanner/bin" >> $GITHUB_PATH
+          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          export PATH=$JAVA_HOME/bin:$PATH
 
       # Verificar instalación de SonarScanner
       - name: Verify SonarScanner installation
